--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "jquery": "^3.7.0",
     "leaflet": "^1.9.4",
+    "qrcode.vue": "^3.4.0",
     "tw-elements": "^1.0.0-beta2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.2.2",
+    "vue3-blocks-tree": "^0.6.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
